third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/control/string-us.stderr
TOML parse error at line 1, column 20
  |
1 | string-us   = "null"
  |                    ^
invalid basic string
